# dotfiles

./: .bashrc  .vimrc  .zshrc  README.md  aur_pkgs.txt  grub_config  install  legacy_pkgs.txt  pkgs.txt
.config/: aliasrc  functions  profile  pulseaudio  wgetrc
.config/MangoHud/: MangoHud.conf
.config/alacritty/: alacritty.toml  alacritty.yml
.config/dunst/: dunstrc
.config/fish/: config.fish
.config/mpv/: input.conf  mpv.conf
.config/newsboat/: config  urls
.config/nvim/: init.lua  init.vim
.config/nvim/lua/: colorscheme.lua  file_operation.lua  functions.lua  init.lua  mappings.lua  plugins.lua  query.lua  sets.lua
.config/nvim/lua/garch/: autocmds.lua  init.lua  keymap.lua  lazy_init.lua  lspconfig.lua  remap.lua  set.lua
.config/nvim/plugin/: autopairs.vim  comment.vim  completion.vim  debugger.vim  dotnet.vim  fugitive.vim  lightline.vim  lsp.vim  sets.vim  telescope.vim  treesitter.vim
.config/picom/: picom.conf
.config/qtile/: autostart.sh  config.py
.config/qutebrowser/: config.py  quickmarks
.config/rofi/: config.rasi
.config/rofi/themes/: default.rasi
.config/spicetify/: config.ini
.config/tmux/: tmux.conf
.config/vim/: vimrc
.config/vim/plugin/: fzf.vim
.config/youtube-dl/: config
.config/ytfzf/: conf.sh
.config/zsh/: .zshrc
.local/share/dwm/: autostart.sh  autostart_blocking.sh
.local/share/qt_sample/: CMakeLists.txt
.local/share/sample_code/: gencpp_makefile  main.cpp
.vim/: .vimrc  vimrc
.vim/plugin/: coc.vim  nerdtree.vim
Dev/common_errors/: pacman_gpg_error
hooks/: droidcam.hook
(+49 files in other folders)
